fixed synonym spacing issue

--- a/src/components/DictionayPage/DictionaryPage.sass
+++ b/src/components/DictionayPage/DictionaryPage.sass
@@ -104,3 +104,17 @@
 .emoji
     width: 64px
     height: 64px
+
+.synonyms
+    color: #A445ED
+
+.synonym-heading
+    color: #757575
+    font-weight: 400
+    font-size: 20px
+    line-height: 21px
+    padding-right: 1rem
+
+.synonymHeading
+    display: flex
+    flex-direction: row
